--- a/McFitSwift/.gitignore
+++ b/McFitSwift/.gitignore
@@ -3,6 +3,10 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+*.xcuserstate
+project.xcworkspace/
+xcuserdata/
+
 ## User settings
 xcuserdata/
 
