created BlogPost model, basic user model file, Views for blog

--- a/McFitSwift/McFitSwift/Info.plist
+++ b/McFitSwift/McFitSwift/Info.plist
@@ -7,7 +7,7 @@
 		<key>UIColorName</key>
 		<string>mcsDarkPurple</string>
 		<key>UIImageName</key>
-		<string>AppIconM</string>
+		<string>AppIconS</string>
 		<key>UIImageRespectsSafeAreaInsets</key>
 		<true/>
 		<key>UILaunchScreen</key>
