--- a/McSwift/McSwift/Resources/GoogleService-Info.plist
+++ b/McSwift/McSwift/Resources/GoogleService-Info.plist
@@ -15,16 +15,18 @@
 	<key>STORAGE_BUCKET</key>
 	<string>mcfitswift.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:51541605636:ios:39adcecbb539628dd82451</string>
+	<key>DATABASE_URL</key>
+	<string>https://mcfitswift-default-rtdb.europe-west1.firebasedatabase.app</string>
 </dict>
 </plist>
